letslightthiscandle.css
/* ... */
.private-office__img {
  margin: 2rem 0 1rem 0;
}

.furniture {
  min-height: 100vh;
  padding: 1rem 0 8rem;
  background-color: #fff;
  background-image: url("img/twofiveseven-coworking-furniture-web-feather.jpg");
  background-position: 100% 80%;
  background-size: contain;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: 75vmax auto;
}

.contact__form {
  max-width: 420px;
  margin: 0 auto;
}

.contact__form label {
  display: block;
  margin-bottom: 0.6rem;
}

.contact__form input,
.contact__form textarea {
  display: block;
  width: 100%;
  margin-bottom: 1rem;
  background: var(--color-black);
  color: whitesmoke;
  border: none;
  padding: 0.8rem 0.8rem;
}

.contact__form textarea {
  min-height: 240px;
  resize: vertical;
}

.contact__form [type='submit'] {
  background: var(--color-black);
  color: whitesmoke;
  border: none;
  padding: 0.6rem 1rem;
  margin-top: 0.4rem;
}

.footer {
  text-align: center;
  display: block;
  padding-bottom: 2rem;
}

@media (max-width: 900px) {
  html {
    font-size: 13px;
  }
  .container {
    max-width: 420px;
    padding: 0 1rem;
  }
  .header {
    padding: 1.6rem 0 0 0;
  }
  .home {
    padding: 3rem 0;
    min-height: auto;
  }
  .header__nav {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: mistyrose;
    -webkit-transform: translateX(-100%);
            transform: translateX(-100%);
  }
  .modal-button {
    position: fixed;
    top: unset;
    bottom: 10px;
    right: 10px;
    z-index: 555;
  }
  .header__inner {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  .header__nav-list {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  h3 {
    font-size: 0.78rem;
  }
  section {
    padding: 2rem 1rem;
  }
  .single-column {
    max-width: 420px;
    width: 100%;
  }
  .two-columns {
    -ms-grid-columns: 1fr;
        grid-template-columns: 1fr;
    gap: 0;
  }
  .text--large {
    font-size: 1.42rem;
    margin: 3rem 0;
  }
  .full-office__inner {
    padding: 1rem;
  }
  .space,
  .furniture {
    padding-top: 2rem;
  }
  .private-office,
  .story {
    padding-bottom: 6rem;
  }
  .space {
    background-position: 50% 270px;
    background-size: contain;
    background-attachment: unset;
    background-repeat: no-repeat;
    background-size: 100%;
  }
  .space__info-top {
    margin-top: 3rem;
  }
  .space__text-intro {
    font-size: 1.8rem;
    max-width: 420px;
    width: 100%;
    margin: 1rem 0 25rem;
  }
  .space__text-intro-list {
    width: 100%;
    max-width: 420px;
  }
  .space__text-list {
    margin: 3rem 0;
  }
  .furniture {
    padding-bottom: 20rem;
    background-position: 50% 100%;
    background-size: contain;
    background-attachment: unset;
    background-repeat: no-repeat;
    background-size: 100%;
  }
  .section__title {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: reverse;
        -ms-flex-direction: row-reverse;
            flex-direction: row-reverse;
    margin-right: 1rem;
  }
  .section__title:after {
    margin: 0 1rem 0 -10rem;
  }
}

.calc-btn {
  max-width:200px;
}

.calculator__intro h2{
 margin-bottom: 0;
 margin-top:50px;
}

.calc-header {
  height:40px;
}

.header-container {
display: flex;
}
span.header-filler {
    background: white;
    display: flex;
    width: auto;
    flex-grow: 1;
}

/*.calculator-home {
  background: white;
  padding-top: 3rem;
}*/
/*# sourceMappingURL=letslightthiscandle.css.map */

